Bug fix: prevent horizontal overflow

--- a/views/css/index.css
+++ b/views/css/index.css
@@ -3,6 +3,8 @@
 body, html{
     height: 100vh;
     width: 100vw;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 form{
